...
        end = 16.dp,
        bottom = contentPadding.calculateBottomPadding() + 24.dp,
    )

private enum class InfoPage { OVERVIEW, APP_LICENSE, LIBRARIES }

const val INFO_OVERVIEW_TAG = "info_overview"
const val APP_LICENSE_BUTTON_TAG = "app_license_button"
const val APP_LICENSE_DETAIL_TAG = "app_license_detail"
const val OSS_LICENSE_BUTTON_TAG = "oss_license_button"
const val OSS_LICENSE_LIST_TAG = "oss_license_list"

